@@ -1,3 +1,8 @@
+2004-07-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* src/htdocs/apps/index.xml:
+	  added 3rd party apps section
+
 2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	reviewed by: <delete if not using a buddy>
